<resources>
    <string name="app_name">Aplicativo de agenda</string>
    <string name="agenda_de_contatos">Agenda de contatos</string>
    <string name="adicionar_contatos">Adicionar contatos</string>
    <string name="contato">Contato</string>
    <string name="inserir_nome_do_contato">Inserir nome do contato</string>
    <string name="inserir_telefone_do_contato">Inserir telefone do contato</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="salvar">Salvar</string>
    <string name="lista_de_contatos">Lista de contatos</string>
    <string name="toque_para_editar_arraste_para_os_lados_para_excluir">Toque para editar, arraste para os lados para excluir</string>
    <string name="desenvolvido_por_lu_s_eduardo">desenvolvido por Luís Eduardo</string>
    <string name="deletar_todos_contatos">Deletar todos contatos</string>
</resources>
